fix align

--- a/dev/css/fly-theme.css
+++ b/dev/css/fly-theme.css
@@ -19,7 +19,9 @@
 .example-grid .fy-gc {
     margin-bottom: 20px;
 }
-.example-grid .fy-gc > div{
+.example-grid > div,
+.fy-demo-grid > div,
+.demo-grid > div{
     border:1px solid #c3c3c3;
 }
 
